--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,36 @@
 		</dependency>
 	</dependencies>
 	
+	<profiles>
+		<profile>
+			<id>local</id>
+			<!-- 默认激活开发配制，使用application.properties来替换设置过虑的资源文件中的${key} -->
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<filters>
+					<filter>src/main/resources/env/local/config.properties</filter>
+				</filters>
+			</build>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<build>
+				<filters>
+					<filter>src/main/resources/env/dev/config.properties</filter>
+				</filters>
+			</build>
+		</profile>
+		<profile>
+			<id>pro</id>
+			<build>
+				<filters>
+					<filter>src/main/resources/env/pro/config.properties</filter>
+				</filters>
+			</build>
+		</profile>
+	</profiles>
 		
 	<build>
         <finalName>craw-ysdd</finalName>
@@ -97,6 +127,7 @@
 					<directory>src/main/resources</directory>
 					<includes>
 						<include>config.properties</include>
+						<include>logback.xml</include>
 					</includes>
 					<filtering>true</filtering>
 				</resource>
@@ -132,6 +163,14 @@
                     <encoding>utf8</encoding>   
                 </configuration>
             </plugin>
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+				<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin> 
         </plugins>
     </build>
 </project>
